--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Stacked Burger</title>
 </head>
+
 <body>
-    <h1> Hello World! (via Handlebars)</h1>
+
+    <section class="jumbotron">
+        <div class="row">
+            <div class="col-lg-6">
+                <h1 class="display-3">Full Stack Burger </h1>
+                <h3 class="lead">Feed your Need for Deliciousness</h3>
+            </div>
+        </div>
+    </section>
+
+    <section class="container-fluid">
+        <h1> Hello World! (via Handlebars)</h1>
+
+        <table>
+            <thead>How do you like it?</thead>
+            <ul>
+                <li>Gross!</li>
+            </ul>
+        </table>
+    </section>
+
+
 </body>
+
 </html>
