successfully using form to add info to db and display on page

--- a/views/hometwo.handlebars
+++ b/views/hometwo.handlebars
@@ -29,13 +29,13 @@
 
         <div class="row">
             <div class="col-lg-6">
-                <form class="create-form">
+                <form class="create-form" action="/post/new" method="POST">
                     <div class="form-group">
                         <label for="b_name">Burger Name:</label>
-                        <input type="text" id="b_name" name="name">
+                        <input type="text" id="b_name" name="burger_name">
                         <p> </p>
                         <label for="m_type">Meat type:</label>
-                        <input type="text" id="m_type" name="type">
+                        <input type="text" id="m_type" name="meat_type">
                         <p></p>
                         <button type="submit">Add Burger</button>
                 </form>
